turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:18: error: ')' expected but character literal found.
var V = Array(1,'L',0,1,'L',1,0'N',0,0,'N',1)
                               ^